--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Flutter Build APK
 on: [push, workflow_dispatch]
 
@@ -7,25 +8,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      # Installation de Java 17 (indispensable pour les projets Android récents)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Installation de Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0' # Version stable recommandée
           channel: 'stable'
 
       - name: Get dependencies
         run: flutter pub get
 
-      # Cette ligne donne les droits d'exécution pour éviter l'erreur "Permission Denied"
+      # Correction ici : on cherche le fichier gradlew partout dans le projet
       - name: Make gradlew executable
-        run: chmod +x android/gradlew
+        run: find . -name "gradlew" -exec chmod +x {} +
 
       - name: Build APK
         run: flutter build apk --debug
@@ -34,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: TeVe-App-Fold
-          path: build/app/outputs/flutter-apk/app-debug.apk
+          path: "**/*.apk" # Cherche tous les fichiers .apk générés
